--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>List of activities</h1>
     </header>
     <main>
+      <div class="Adding-List">
       <div class="add-task">
         <input type="text" id="new-todo" placeholder="Add a Todo...">
         <button id="add-button">Add</button>
@@ -19,6 +20,7 @@
       <div id="todo-container">
         <ul id="todo-list"></ul>
       </div>
+    </div>
     </main>
   </div>
   <script src="app.js"></script>
